--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,53 @@
-name: Deploy 🚀 Clima to Google Cloud Run (☁🏃)
+# Copyright 2019 Google, LLC.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 on:
   push:
-    branches: [ main ]
+    branches:
+    - main
+
+name: Build and Deploy to Cloud Run
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT }}
+  SERVICE: continuous-deployment
+  REGION: us-east1
+
 jobs:
   deploy:
-    name: Deploying 🚀 Clima
     runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, 'bump version')"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      # Build and push image to Google Container Registry
-      - name: Setting up
-        uses: google-github-actions/setup-gcloud@master
-        with:
-          version: '286.0.0'
-          service_account_key: ${{ secrets.GCP_SA_KEY_JSON }}
-          service_account_email: "pooja.bera@deutsche-boerse.com"
-          project_id: dbg-corpservices-sbox-17ff8162
+    - name: Setup Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        project_id: ${{ env.PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Building (🏗)
-        run: |-
-          gcloud builds submit \
-            --tag gcr.io/dbg-corpservices-sbox-17ff8162/github-actions
+    - name: Authorize Docker push
+      run: gcloud auth configure-docker
 
-      # Setup gcloud CLI
-      - name: Deploy (🚀)
-        uses: google-github-actions/deploy-cloudrun@main
-        with:
-          service: github-actions
-          image: gcr.io/dbg-corpservices-sbox-17ff8162/github-actions
-          region: us-east1
-          credentials: ${{ secrets.GCP_SA_KEY_JSON }}
-          project_id: dbg-corpservices-sbox-17ff8162
+    - name: Build and Push Container
+      run: |-
+        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
+        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
+        
+    - name: Deploy to Cloud Run
+      run: |-
+        gcloud run deploy ${{ env.SERVICE }} \
+          --region ${{ env.REGION }} \
+          --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} \
+          --platform "managed" \
+          --quiet 
