--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
     branches:
     - main
 
-name: Build and Deploy to Cloud Run pooja
+name: Build and Deploy to Cloud Run poojabera
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   SERVICE: continuous-deployment
