--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,42 +12,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-on:
-  push:
-    branches:
-    - main
+name: Show current gcloud auth
 
-name: Build and Deploy to Cloud Run pooja
-env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT }}
-  SERVICE: continuous-deployment
-  REGION: us-east1
+on: [push]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  show-auth:
+    name: Show gcloud auth
+    runs-on: self-hosted
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Setup Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0
+    # Setup gcloud CLI
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
-        project_id: ${{ env.PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        version: '290.0.1'
 
-    - name: Authorize Docker push
-      run: gcloud auth configure-docker
-
-    - name: Build and Push Container
-      run: |-
-        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
-        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
-        
-    - name: Deploy to Cloud Run
-      run: |-
-        gcloud run deploy ${{ env.SERVICE }} \
-          --region ${{ env.REGION }} \
-          --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} \
-          --platform "managed" \
-          --quiet 
+    # List auth
+    - run: |-
+        gcloud auth list
