--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ name: Build and Deploy to Cloud Run pooja
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   SERVICE: continuous-deployment
+  APP_ID: continous-deployment
+  RUN_REGION: us-east1
   REGION: us-east1
   PORT : 8080
   
@@ -32,7 +34,7 @@ jobs:
         docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
         docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
     - name: Deploy
-      run: gcloud run deploy ${{ env.SERVICE }} --image gcr.io/{{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} --platform managed --region ${{ env.REGION }} --allow-unauthenticated
+        run: gcloud run deploy $APP_ID --image gcr.io/$PROJECT_ID/$APP_ID:$GITHUB_SHA --platform managed --region $RUN_REGION --allow-unauthenticated
 
         
     #- name: Deploy to Cloud Run
