--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         service: ${{ env.SERVICE }}
         image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
         region: ${{ env.REGION }}
-        platform: "managed"
+        credentials: ${{ secrets.GCP_SA_KEY }}
 
     #- name: Deploy to Cloud Run
      # run: |-
