--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   SERVICE: continuous-deployment
   REGION: us-east1
+  GIT_TOKEN: ${{ secrets.GIT_TOKEN}}
   PORT : 8080
   
 
@@ -20,7 +21,6 @@ jobs:
 
     - name: Set github token
       run: |
-          GIT_TOKEN=$(<token)
           echo "GIT_TOKEN=${GIT_TOKEN}" >> $GITHUB_ENV
 
     - name: Setup Cloud SDK
