--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,21 +32,17 @@ jobs:
     - name: Authorize Docker push
       run: gcloud auth configure-docker
 
-    #- name: Build and Push Container
-     # run: |-
+    - name: Build and Push Container
+      run: |-
        # docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
        # docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
         
-    #- name: Deploy to Cloud Run
-    #  run: |-
+    - name: Deploy to Cloud Run
+      run: |-
         #gcloud run deploy ${{ env.SERVICE }} \
          # --region ${{ env.REGION }} \
          # --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} \
          # --platform "managed" \
           #--quiet 
 
-    - name: Build
-      run: gcloud builds submit --tag gcr.io/$PROJECT_ID/continuous-deployment:$GITHUB_SHA
-
-    - name: Deploy
-      run: gcloud run deploy continuous-deployment --image gcr.io/$PROJECT_ID/continuous-deployment:$GITHUB_SHA --platform managed --region us-east1 --allow-unauthenticated
+    
